# carbonara-watchdog

./: .gitattributes  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: build.yaml
src/: carbo.rs  lib.rs
telegram/: logo.psd
