[package]
name = "carbonara_watchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.113"
chrono = "0.4.34"
chrono-tz = "0.8.6"
teloxide = { version = "0.12", features = ["macros"] }

[[bin]]
name = "carbonara-watchdog-cli"
path = "src/cli/bin/main.rs"

[[bin]]
name = "carbonara-watchdog-tele"
path = "src/tele/bin/main.rs"
