[package]
name = "carbonara_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.196"
serde_json = "1.0.113"
chrono = "0.4.34"
chrono-tz = "0.8.6"
teloxide = { version = "0.12", features = ["macros"] }
google-sheets4 = "*"
anyhow = "1.0.82"
base64 = "*"
async-trait = "0.1.80"

[[bin]]
name = "carbonara-watchdog-cli"
path = "src/cli/bin/main.rs"

[[bin]]
name = "carbonara-watchdog-tele"
path = "src/tele/bin/main.rs"
